--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -1,6 +1,36 @@
 /* IMPOSTAZIONI GENERALI */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+/* font-family: 'Open Sans', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* font-family: 'Montserrat', sans-serif; */
+body {
+    font-family: 'Open Sans', sans-serif;
+}
 
 /* HEADER */
+.logo {
+    background-color: black;
+    width: auto;
+    height: auto;
+}
+.logo img {
+    display: block;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 170px; 
+    height: auto;
+}
+.corsodev {
+    background-image: url(../images/banner.jpg);
+    background-position: center;
+    background-size: cover;
+    width: auto;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    display: block;
+    background-repeat: no-repeat;
+}
 
 /* MAIN */
 
