--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -26,13 +26,132 @@ body {
     background-position: center;
     background-size: cover;
     width: auto;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     display: block;
     background-repeat: no-repeat;
 }
-
+.corsodev h1 {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    color: #25a2c3;
+    font-weight: bold;
+    line-height: 1.5;
+    font-size: xxx-large;
+}
+.corsodev p {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    color: #393d41;
+    line-height: 1.65;
+    font-size: 1.2rem;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+button {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    background-color: #f04c2f;
+    border: none;
+    padding: 1rem;
+    color: white;
+}
+.corsodev button {
+    text-align: center;
+}
 /* MAIN */
+.divmain {
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    line-height: 1.65;
+    margin-top: 3rem;
+}
+.divmain h3 {
+    color: #25a2c3;
+    font-weight: bold;
+    line-height: 1.5;
+}
+.cerchio {
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+    position: relative;
+    margin-top: 3rem;
+}
+.rosso {
+    background-color: #f04c2f;
+    text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+}
+.rosso h2 {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    line-height: 1.5;
+    font-size: xx-large;
+    padding-bottom: 2rem;
+}
+.rosso p {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    line-height: 1.5;
+    font-style: italic;
+}
+.rosso h6 {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    line-height: 1.5;
+    font-size: large;
+    padding-top: 2rem;
+}
+section div {
+    border: 1px solid #dee1e3;
+    border-radius: 5px;
+    margin-bottom: 4rem;
+    text-align: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+section img {
+    width: 100%;
+    height: 100%;
+}
+footer {
+    background-color: #25a2c3;
+    text-align: center;
+}
+footer h2 {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-weight: bold;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    font-size: x-large;
+}
+footer a {
+    font-family: 'Open Sans', sans-serif;
+    color: #c8e7f0;
+    line-height: 1.5;
+}
+footer p {
+    font-family: 'Open Sans', sans-serif;
+    color: #c8e7f0;
+    line-height: 1.5;
+}
+hr {
+    color: #c8e7f0;
+    margin-left: 35%;
+    margin-right: 35%;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+.lastp {
+    padding-bottom: 4rem;
+}
 
 /* ASIDE */
 
