--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -121,6 +121,18 @@ section img {
     width: 100%;
     height: 100%;
 }
+section div h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #25a2c3;
+    font-weight: bold;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+section div p {
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.65;
+    padding-bottom: 2rem;
+}
 footer {
     background-color: #25a2c3;
     text-align: center;
