--- a/assets/css/stile.css
+++ b/assets/css/stile.css
@@ -37,7 +37,7 @@ body {
     text-align: center;
     color: #25a2c3;
     font-weight: bold;
-    line-height: 1.5;
+    line-height: 1;
     font-size: xxx-large;
 }
 .corsodev p {
@@ -55,7 +55,11 @@ button {
     background-color: #f04c2f;
     border: none;
     padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     color: white;
+    border-radius: 5px;
+    text-transform: uppercase;
 }
 /* MAIN */
 .divmain {
@@ -157,8 +161,8 @@ footer p {
 }
 hr {
     color: #c8e7f0;
-    margin-left: 35%;
-    margin-right: 35%;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
 }
